homecluster/linkding/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkding
  labels:
    app.kubernetes.io/name:  linkding
    app.kubernetes.io/component: namespace
