homecluster/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: linkding
  labels:
    app.kubernetes.io/name: linkding
    app.kubernetes.io/instance: linkding
    app.kubernetes.io/version: "1.22.1"
    app.kubernetes.io/component: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: linkding
      app.kubernetes.io/instance: linkding
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linkding
        app.kubernetes.io/instance: linkding
        app.kubernetes.io/version: "1.22.1"
    spec:
      serviceAccountName: default
      containers:
        - name: linkding
          image: "sissbruecker/linkding:1.22.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: "http"
              containerPort: 9090
              protocol: "TCP"
          volumeMounts:
            - name: linkding-storage
              mountPath: /etc/linkding/data
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources: {}
      volumes:
        - name: linkding-storage
          persistentVolumeClaim:
            claimName: linkding-storage
