homecluster/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: linkding
  labels:
    app.kubernetes.io/name: linkding
    app.kubernetes.io/instance: linkding
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
    - name: "http"
      port: 9090
      targetPort: "http"
      protocol: "TCP"
  selector:
    app.kubernetes.io/name: linkding
    app.kubernetes.io/instance: linkding
