homecluster/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: linkding
  name: linkding-ingress
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
  labels:
    app.kubernetes.io/name: linkding-ingress
    app.kubernetes.io/component: ingress
spec:
  tls:
  - hosts:
    -  linkding.mgsds.com
    secretName: linkding-ingress-tls
  rules:
  - host: linkding.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linkding
            port:
              number: 9090
